src/objects/geopointe__GP_List2__c.object
<CustomObject>
    <description>Working list for a user to keep track of records they want to visit.</description>
    <fields>
        <fullName>geopointe__Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status of the list - completed or not completed.</description>
        <inlineHelpText>Status of the list - completed or not completed.</inlineHelpText>
        <label>Is Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Marker_Color__c</fullName>
        <defaultValue>&quot;FF0000&quot;</defaultValue>
        <inlineHelpText>The HEX color that the active List markers should be in</inlineHelpText>
        <label>Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Geopointe List</label>
    <nameField>
        <label>Geopointe List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Lists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>